--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 
 services:
-  gpt4u-frontend: # name of first service
+  frontend: # name of first service
     build: .
     ports:
       - 8501:8501
